Fix collapsable sidebar on desktop

--- a/admin/frontend/styles/base.scss
+++ b/admin/frontend/styles/base.scss
@@ -82,10 +82,6 @@ html, body {
   background-color: #fff;
 }
 
-.menu {
-  overflow-y: scroll;
-}
-
 .overflow-table{
   @media only screen and (max-width: 450px) and (orientation: portrait) {
     max-width: 75vw;
